kubeflow/charts/katib/katib-external-db-with-kubeflow/templates/AuthorizationPolicy/katib-ui-kubeflow-AuthorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
        - kubeflow
  selector:
    matchLabels:
      katib.kubeflow.org/component: ui
